simpleweb/simpleweb-pod.yaml
apiVersion: v1
kind: Pod
metadata:
    name: simpleweb
    labels:
        app: simpleweb
spec:
    containers:
        - name: simpleweb
          image: venkyg/simpleweb
          ports:
            - containerPort: 8080
              name: simpleweb
