simpleweb/simpleweb-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
spec:
  backend:
    serviceName: simpleweb-service
    servicePort: 8080
