simpleweb/simpleweb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: simpleweb-service
  namespace: simpleweb
spec:
  type: NodePort
  ports:
    - port: 8080
  selector:
    app: simpleweb
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simpleweb-ingress
  namespace: simpleweb
spec:
  backend:
    serviceName: simpleweb-service
    servicePort: 8080
